--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.3",
         "zod-i18n-map": "^2.27.0",
-        "zustand": "^4.4.7"
+        "zustand": "^4.4.7",
+        "argon2": "^0.40.3"
     },
     "devDependencies": {
         "@types/eslint": "^8.56.10",
