--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,8 @@ AUTH_SECRET=""
 # Next Auth Discord Provider
 AUTH_DISCORD_ID=""
 AUTH_DISCORD_SECRET=""
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
